syntax = "proto3";

package products;

service ProductService {
   rpc getProduct(ProductRequest) returns (ProductResponse);
   rpc createProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
   int32 productId = 1;
}

message ProductResponse {
   int32 productId = 1;
   string name = 2;
   string description = 3;
   float price = 4;
}
